# ExpensePMS

gradle/: libs.versions.toml
src/main/Cpp/: CMakeLists.txt  native-lib.c
src/main/java/com/example/expense/: Expense.java  ExpenseDao.java  ExpensesAdapter.java  MainActivity.java
src/main/res/layout/: activity_main.xml
src/main/res/layout-sw600dp/: activity_main.xml
src/main/res/values/: strings.xml
